crates/oxc_semantic/tests/integration/snapshots/switch_statement.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/switch_statement.js
---
bb0: {
	(BasicBlockFlags(Implicit | Error))
}

bb1: {
	(BasicBlockFlags(Start | Referenced | Shared))
}

bb2: {
	(BasicBlockFlags(Implicit | Error))
}

bb3: {
	(BasicBlockFlags(Start | Referenced | Shared))
	statement
}

bb4: {
	(BasicBlockFlags(Referenced | Shared))
	condition
}

bb5: {
	(BasicBlockFlags(Referenced | Shared))
	statement
	break
}

bb6: {
	(BasicBlockFlags(Unreachable | Referenced))
	unreachable
}

bb7: {
	(BasicBlockFlags(Referenced | Shared))
	condition
}

bb8: {
	(BasicBlockFlags(Referenced))
	statement
}

bb9: {
	(BasicBlockFlags(Referenced | Shared))
	condition
}

bb10: {
	(BasicBlockFlags(Referenced | Shared))
	statement
	break
}

bb11: {
	(BasicBlockFlags(Unreachable | Referenced))
	unreachable
}

bb12: {
	(BasicBlockFlags(Referenced | Shared))
	condition
}

bb13: {
	(BasicBlockFlags(Referenced))
	statement
	statement
	statement
	statement
	return <value>
}

bb14: {
	(BasicBlockFlags(Unreachable | Referenced))
	unreachable
}

bb15: {
	(BasicBlockFlags(Referenced | Shared))
	condition
}

bb16: {
	(BasicBlockFlags(Referenced))
	statement
	statement
	statement
}

bb17: {
	(BasicBlockFlags(Referenced))
}

bb18: {
	(BasicBlockFlags(Referenced))
	statement
	return <value>
}

bb19: {
	(BasicBlockFlags(Unreachable | Referenced))
	unreachable
}

bb20: {
	(BasicBlockFlags(Referenced))
	statement
	return <value>
}

bb21: {
	(BasicBlockFlags(Unreachable))
	unreachable
}

bb22: {
	(BasicBlockFlags(0x0))
}

digraph {
    0 [ label = "bb0
(BasicBlockFlags(Implicit | Error))" shape = box]
    1 [ label = "bb1
(BasicBlockFlags(Start | Referenced | Shared))" shape = box]
    2 [ label = "bb2
(BasicBlockFlags(Implicit | Error))" shape = box]
    3 [ label = "bb3
(BasicBlockFlags(Start | Referenced | Shared))
SwitchStatement" shape = box]
    4 [ label = "bb4
(BasicBlockFlags(Referenced | Shared))
Condition(1)" shape = box]
    5 [ label = "bb5
(BasicBlockFlags(Referenced | Shared))
ExpressionStatement
break" shape = box]
    6 [ label = "bb6
(BasicBlockFlags(Unreachable | Referenced))
unreachable" shape = box]
    7 [ label = "bb7
(BasicBlockFlags(Referenced | Shared))
Condition(2)" shape = box]
    8 [ label = "bb8
(BasicBlockFlags(Referenced))
ExpressionStatement" shape = box]
    9 [ label = "bb9
(BasicBlockFlags(Referenced | Shared))
Condition(3)" shape = box]
    10 [ label = "bb10
(BasicBlockFlags(Referenced | Shared))
ExpressionStatement
break" shape = box]
    11 [ label = "bb11
(BasicBlockFlags(Unreachable | Referenced))
unreachable" shape = box]
    12 [ label = "bb12
(BasicBlockFlags(Referenced | Shared))
Condition(4)" shape = box]
    13 [ label = "bb13
(BasicBlockFlags(Referenced))
BlockStatement
ExpressionStatement
VariableDeclaration
ExpressionStatement
return <value>" shape = box]
    14 [ label = "bb14
(BasicBlockFlags(Unreachable | Referenced))
unreachable" shape = box]
    15 [ label = "bb15
(BasicBlockFlags(Referenced | Shared))
Condition(5)" shape = box]
    16 [ label = "bb16
(BasicBlockFlags(Referenced))
ExpressionStatement
ExpressionStatement
ExpressionStatement" shape = box]
    17 [ label = "bb17
(BasicBlockFlags(Referenced))" shape = box]
    18 [ label = "bb18
(BasicBlockFlags(Referenced))
ExpressionStatement
return <value>" shape = box]
    19 [ label = "bb19
(BasicBlockFlags(Unreachable | Referenced))
unreachable" shape = box]
    20 [ label = "bb20
(BasicBlockFlags(Referenced))
ExpressionStatement
return <value>" shape = box]
    21 [ label = "bb21
(BasicBlockFlags(Unreachable))
unreachable" shape = box]
    22 [ label = "bb22
(BasicBlockFlags(0x0))" shape = box]
    1 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 3 [ label="NewFunction"]
    4 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    5 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    4 -> 5 [ label="Jump", color=green]
    6 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    5 -> 6 [ label="Unreachable", style="dotted"]
    7 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    8 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    7 -> 8 [ label="Jump", color=green]
    9 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    10 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    9 -> 10 [ label="Jump", color=green]
    11 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    10 -> 11 [ label="Unreachable", style="dotted"]
    12 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    13 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    12 -> 13 [ label="Jump", color=green]
    14 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    13 -> 14 [ label="Unreachable", style="dotted"]
    15 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    16 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    15 -> 16 [ label="Jump", color=green]
    17 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    18 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    17 -> 18 [ label="Jump", color=green]
    19 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    18 -> 19 [ label="Unreachable", style="dotted"]
    4 -> 7 [ label="Normal"]
    4 -> 9 [ label="Normal"]
    4 -> 12 [ label="Normal"]
    4 -> 15 [ label="Normal"]
    4 -> 17 [ label="Normal"]
    6 -> 7 [ label="Normal", style="dotted"]
    3 -> 4 [ label="Normal"]
    7 -> 9 [ label="Normal"]
    7 -> 12 [ label="Normal"]
    7 -> 15 [ label="Normal"]
    7 -> 17 [ label="Normal"]
    8 -> 9 [ label="Normal"]
    3 -> 7 [ label="Normal"]
    9 -> 12 [ label="Normal"]
    9 -> 15 [ label="Normal"]
    9 -> 17 [ label="Normal"]
    11 -> 12 [ label="Normal", style="dotted"]
    3 -> 9 [ label="Normal"]
    12 -> 15 [ label="Normal"]
    12 -> 17 [ label="Normal"]
    14 -> 15 [ label="Normal", style="dotted"]
    3 -> 12 [ label="Normal"]
    15 -> 17 [ label="Normal"]
    16 -> 17 [ label="Normal"]
    3 -> 15 [ label="Normal"]
    3 -> 17 [ label="Normal"]
    20 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    19 -> 20 [ label="Normal", style="dotted"]
    5 -> 20 [ label="Jump", color=green]
    10 -> 20 [ label="Jump", color=green]
    21 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    20 -> 21 [ label="Unreachable", style="dotted"]
    22 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 22 [ label="Normal"]
}
