crates/oxc_semantic/tests/integration/snapshots/two_functions.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/two_functions.js
---
bb0: {
	(BasicBlockFlags(Implicit | Error))
}

bb1: {
	(BasicBlockFlags(Start | Referenced | Shared))
}

bb2: {
	(BasicBlockFlags(Implicit | Error))
}

bb3: {
	(BasicBlockFlags(Start | Referenced))
	return <value>
}

bb4: {
	(BasicBlockFlags(Unreachable))
	unreachable
}

bb5: {
	(BasicBlockFlags(Referenced | Shared))
}

bb6: {
	(BasicBlockFlags(Implicit | Error))
}

bb7: {
	(BasicBlockFlags(Start | Referenced))
	return <value>
}

bb8: {
	(BasicBlockFlags(Unreachable))
	unreachable
}

bb9: {
	(BasicBlockFlags(0x0))
}

digraph {
    0 [ label = "bb0
(BasicBlockFlags(Implicit | Error))" shape = box]
    1 [ label = "bb1
(BasicBlockFlags(Start | Referenced | Shared))" shape = box]
    2 [ label = "bb2
(BasicBlockFlags(Implicit | Error))" shape = box]
    3 [ label = "bb3
(BasicBlockFlags(Start | Referenced))
return <value>" shape = box]
    4 [ label = "bb4
(BasicBlockFlags(Unreachable))
unreachable" shape = box]
    5 [ label = "bb5
(BasicBlockFlags(Referenced | Shared))" shape = box]
    6 [ label = "bb6
(BasicBlockFlags(Implicit | Error))" shape = box]
    7 [ label = "bb7
(BasicBlockFlags(Start | Referenced))
return <value>" shape = box]
    8 [ label = "bb8
(BasicBlockFlags(Unreachable))
unreachable" shape = box]
    9 [ label = "bb9
(BasicBlockFlags(0x0))" shape = box]
    1 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 3 [ label="NewFunction"]
    4 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 4 [ label="Unreachable", style="dotted"]
    5 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 5 [ label="Normal"]
    7 -> 6 [ label="Error(Implicit)", style=dashed, color=red]
    5 -> 7 [ label="NewFunction"]
    8 -> 6 [ label="Error(Implicit)", style=dashed, color=red]
    7 -> 8 [ label="Unreachable", style="dotted"]
    9 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    5 -> 9 [ label="Normal"]
}
