crates/oxc_semantic/tests/integration/snapshots/unary_operator.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/unary_operator.js
---
bb0: {
	(BasicBlockFlags(Implicit | Error))
}

bb1: {
	(BasicBlockFlags(Start))
	statement
	statement
	statement
}

digraph {
    0 [ label = "bb0
(BasicBlockFlags(Implicit | Error))" shape = box]
    1 [ label = "bb1
(BasicBlockFlags(Start))
ExpressionStatement
ExpressionStatement
ExpressionStatement" shape = box]
    1 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
}
